@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2022 the original author or authors.
+ * Copyright 2002-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -20,19 +20,23 @@ import java.lang.annotation.ElementType;
 import java.lang.annotation.Retention;
 import java.lang.annotation.RetentionPolicy;
 import java.lang.annotation.Target;
-import java.util.Arrays;
 import java.util.Iterator;
+import java.util.List;
 import java.util.Locale;
 import java.util.stream.Stream;
 
 import io.netty.handler.codec.http.DefaultHttpHeaders;
 import io.undertow.util.HeaderMap;
 import org.apache.tomcat.util.http.MimeHeaders;
+import org.assertj.core.api.StringAssert;
 import org.eclipse.jetty.http.HttpFields;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 
+import org.springframework.http.support.JettyHeadersAdapter;
+import org.springframework.http.support.Netty4HeadersAdapter;
+import org.springframework.http.support.Netty5HeadersAdapter;
 import org.springframework.util.CollectionUtils;
 import org.springframework.util.LinkedCaseInsensitiveMap;
 import org.springframework.util.MultiValueMap;
@@ -43,7 +47,7 @@ import static org.junit.jupiter.api.Named.named;
 import static org.junit.jupiter.params.provider.Arguments.arguments;
 
 /**
- * Unit tests for {@code HeadersAdapters} {@code MultiValueMap} implementations.
+ * Tests for {@code HeadersAdapters} {@code MultiValueMap} implementations.
  *
  * @author Brian Clozel
  * @author Sam Brannen
@@ -86,13 +90,13 @@ class HeadersAdaptersTests {
 		headers.add("TestHeader", "first");
 		headers.add("TestHeader", "second");
 		assertThat(headers.getFirst("TestHeader")).isEqualTo("first");
-		assertThat(headers.get("TestHeader").get(0)).isEqualTo("first");
+		assertThat(headers.get("TestHeader"), StringAssert.class).element(0).isEqualTo("first");
 	}
 
 	@ParameterizedHeadersTest
 	void putShouldOverrideExisting(MultiValueMap<String, String> headers) {
 		headers.add("TestHeader", "first");
-		headers.put("TestHeader", Arrays.asList("override"));
+		headers.put("TestHeader", List.of("override"));
 		assertThat(headers.getFirst("TestHeader")).isEqualTo("override");
 		assertThat(headers.get("TestHeader")).hasSize(1);
 	}
@@ -134,7 +138,7 @@ class HeadersAdaptersTests {
 	static Stream<Arguments> headers() {
 		return Stream.of(
 				arguments(named("Map", CollectionUtils.toMultiValueMap(new LinkedCaseInsensitiveMap<>(8, Locale.ENGLISH)))),
-				arguments(named("Netty", new NettyHeadersAdapter(new DefaultHttpHeaders()))),
+				arguments(named("Netty", new Netty4HeadersAdapter(new DefaultHttpHeaders()))),
 				arguments(named("Netty", new Netty5HeadersAdapter(io.netty5.handler.codec.http.headers.HttpHeaders.newHeaders()))),
 				arguments(named("Tomcat", new TomcatHeadersAdapter(new MimeHeaders()))),
 				arguments(named("Undertow", new UndertowHeadersAdapter(new HeaderMap()))),
